Fixed alignment

--- a/style.css
+++ b/style.css
@@ -4494,7 +4494,7 @@ p > video {
 	}
 
 	.entry-content {
-		margin-left: 16px;
+		/*margin-left: 16px;*/
 	}
 
 	.entry-content,
